# esp32-h2-zigbee-window

./: CMakeLists.txt  INSTALL.md  README.md  sdkconfig.defaults
esp32-h2-zigbee-window/: CMakeLists.txt  README.md  sdkconfig.defaults
esp32-h2-zigbee-window/components/esp_zigbee_lib/: CMakeLists.txt  esp_zigbee_lib.c
esp32-h2-zigbee-window/components/esp_zigbee_lib/include/: esp_zigbee_lib.h
esp32-h2-zigbee-window/main/: CMakeLists.txt  main.c  ota_update.c  ota_update.h  power_management.c  power_management.h  servo_control.c  servo_control.h  state_management.c  state_management.h  zigbee_device.c  zigbee_device.h
main/: CMakeLists.txt  esp_zigbee_lib.c  esp_zigbee_lib.h  main.c  ota_update.c  ota_update.h  power_management.c  power_management.h  servo_control.c  servo_control.h  state_management.c  state_management.h  zigbee_handler.c  zigbee_handler.h
